Closed Bug 1655779 Opened 5 years ago Closed 5 years ago

Crash in [@ mozilla::a11y::GeckoTextMarkerRange::LinkCount]

Categories

(Core :: Disability Access APIs, defect, P1)

Firefox 81
Desktop
macOS
defect

Tracking

()

RESOLVED FIXED
81 Branch
Tracking Status
firefox-esr68 --- unaffected
firefox-esr78 --- unaffected
firefox79 --- unaffected
firefox80 --- fixed
firefox81 --- fixed

People

(Reporter: MarcoZ, Assigned: eeejay)

Details

(Keywords: crash, regression, Whiteboard: [Mac2020_2])

Crash Data

Attachments

(1 file)

This bug is for crash report bp-b6f60a04-8bbf-46c0-b287-fc98c0200728.

Top 10 frames of crashing thread:

0 XUL mozilla::a11y::GeckoTextMarkerRange::LinkCount const accessible/mac/GeckoTextMarker.mm:301
1 XUL mozilla::a11y::GeckoTextMarkerRange::TextInternal const accessible/mac/GeckoTextMarker.mm:329
2 XUL mozilla::a11y::GeckoTextMarkerRange::Text const accessible/mac/GeckoTextMarker.mm:262
3 XUL -[MOXTextMarkerDelegate moxStringForTextMarkerRange:] accessible/mac/MOXTextMarkerDelegate.mm:110
4 XUL -[MOXTextMarkerDelegate moxLengthForTextMarkerRange:] accessible/mac/MOXTextMarkerDelegate.mm:114
5 XUL -[MOXAccessibleBase accessibilityAttributeValue:forParameter:] accessible/mac/MOXAccessibleBase.mm:292
6 AppKit AppKit@0x679c3d 
7 AppKit AppKit@0x6753c9 
8 AppKit AppKit@0x676737 
9 AppKit AppKit@0x479460 

I was doing the following:

  1. From the "You've just been upgraded to Nightly 81", chose the SignIn button.
  2. Was brought to the Firefox Accounts sign in page. User name and password were already filled out from credentials saved in about:logins.
  3. Hit the Sign In button, or just pressed Enter on the password field to submit the form.
  4. I have 2FA set up on my account, so Firefox comes back asking me for a 2-factor code from an authenticator app. This is when it crashes. I briefly hear that the focus is in the field for the code, then I am dropped first back to Finder, then to Moz Crash Reporter.

This is reproducible 100% of the time. Another report of this is here.

Assignee: nobody → eitan
Status: NEW → ASSIGNED
Pushed by mzehe@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/186633314968 Check that range is valid before getting its string. r=MarcoZ
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 81 Branch

Comment on attachment 9166597 [details]
Bug 1655779 - Check that range is valid before getting its string. r?MarcoZ

Beta/Release Uplift Approval Request

  • User impact if declined: Potential crash
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): This is just a check to see if an input argument is valid.
  • String changes made/needed:
Attachment #9166597 - Flags: approval-mozilla-beta?

Comment on attachment 9166597 [details]
Bug 1655779 - Check that range is valid before getting its string. r?MarcoZ

mac a11y crash fix, approved for 80.0b4

Attachment #9166597 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: