Bug 1655779 - Check that range is valid before getting its string. r=MarcoZ

Differential Revision: https://phabricator.services.mozilla.com/D85179